html & css changes

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
 </head>
 <body>
     <h1>D3 Practice</h1>
+    <h2>Scatter Plot Brush Selector</h2>
     <div class = "tutorial" id="scatterplotbrush">Placeholder Text</div>
-    <h5><a href="https://www.terminusdatascience.com">© 2021 kbt | tds, LLC</a></h5>
+    <h4><b><a href="https://observablehq.com/@d3/brushable-scatterplot-matrix">Javascript implementation from Observable</a></b></h5>
+    <h4><b><a href="https://www.terminusdatascience.com">© 2021 kbt | tds, LLC</a></b></h5>
     <script type="text/javascript" src="main.js" defer></script>
 
 </body>
