--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     </div>
     <div class = "tutorial" id="planetDrag">click and drag the planet
     </div>
+    <h4>D3 line graphs</h4>
+    <div class = "tutorial" id="lineGraph">animated line graph
+    </div>
     <h4><a href="https://www.terminusdatascience.com">© 2021 kbt | tds, LLC</a></h5>
     <script src="https://unpkg.com/versor"></script>
     <script src="https://unpkg.com/topojson-client@3"></script>
@@ -40,6 +43,9 @@
         import makeplanetdrag from './planetdrag.js';
         make_scatter_matrix();
         makeplanetdrag();
+
+
     </script>
+
 </body>
 </html>
