added static d3 chart.

--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
     <script type="module">
         import make_scatter_matrix from './brushscattermatrix.js';
         import makeplanetdrag from './planetdrag.js';
+        import stockGrapher from './linegraph.js';
         make_scatter_matrix();
         makeplanetdrag();
-
+        stockGrapher();
 
     </script>
 
