added animations and replay button to d3 line graph

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 <body>
     <h1>D3 Practice</h1>
     <h2>Scatter Plot Brush Selector</h2>
-    <h4><a href="https://observablehq.com/@d3/brushable-scatterplot-matrix">Javascript implementation of brush selecting multiple scatter plots from Observable</a></h5>
+    <p><a href="https://observablehq.com/@d3/brushable-scatterplot-matrix">Javascript implementation of brush selecting multiple scatter plots from Observable</a></p>
     <div class = "tutorial" id="scatterplotbrush">scatterplot brush matrix</div>
-    <h4><a href="https://observablehq.com/@d3/versor-dragging">Javascript implementation of using versor to click and drag earth from Observable</a></h4>
+    <h2>Spinnable Earth Projections</h2>
+    <p><a href="https://observablehq.com/@d3/versor-dragging">Javascript implementation of using versor to click and drag earth from Observable</a></p>
     <div id= "viewSelectorBox">
         <select id = "viewSelector">
             <option value="geoOrthographic">Orthographic</option>
@@ -32,7 +33,9 @@
     </div>
     <div class = "tutorial" id="planetDrag">click and drag the planet
     </div>
-    <h4>D3 line graphs</h4>
+    <h2>D3 animated line graphs</h2>
+    <p><a href="https://observablehq.com/@d3/learn-d3-animation?collection=@d3/learn-d3">a Javascript implementation of an observablehq tutorial.</a></p>
+    <button id="replayAnimation">Replay</button>
     <div class = "tutorial" id="lineGraph">animated line graph
     </div>
     <h4><a href="https://www.terminusdatascience.com">© 2021 kbt | tds, LLC</a></h5>
